objects/pse__IHC_Mapping_Jira_to_PSA__mdt.object
<CustomObject>
    <description>Contains records that specify the required information for creating Jira-PSA field mappings in Integration Hub Connector.</description>
    <fields>
        <fullName>pse__Jira_Field__c</fullName>
        <description>Jira object field for which the mapping is created in Integration Hub Connector.</description>
        <inlineHelpText>Jira object field for which the mapping is created in Integration Hub Connector.</inlineHelpText>
        <label>Jira Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Jira_Object__c</fullName>
        <description>Jira Cloud object for which the mapping is created in Integration Hub Connector.</description>
        <inlineHelpText>Jira Cloud object for which the mapping is created in Integration Hub Connector.</inlineHelpText>
        <label>Jira Cloud Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Jira_OnPrem_Object__c</fullName>
        <description>Jira On-Prem object for which the mapping is created in Integration Hub Connector.</description>
        <inlineHelpText>Jira On-Prem object for which the mapping is created in Integration Hub Connector.</inlineHelpText>
        <label>Jira On-Prem Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__PSA_Field__c</fullName>
        <description>PSA object field for which the mapping is created in Integration Hub Connector.</description>
        <inlineHelpText>PSA object field for which the mapping is created in Integration Hub Connector.</inlineHelpText>
        <label>PSA Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__PSA_Object__c</fullName>
        <description>PSA object for which the mapping is created in Integration Hub Connector.</description>
        <inlineHelpText>PSA object for which the mapping is created in Integration Hub Connector.</inlineHelpText>
        <label>PSA Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__VDR_Key__c</fullName>
        <description>Virtual Data Resource key used for the mapping in Integration Hub Connector.</description>
        <inlineHelpText>Virtual Data Resource key used for the mapping in Integration Hub Connector.</inlineHelpText>
        <label>VDR Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__VDR_Name__c</fullName>
        <description>Name of the Virtual Data Resource in Integration Hub Connector.</description>
        <inlineHelpText>Name of the Virtual Data Resource in Integration Hub Connector.</inlineHelpText>
        <label>VDR Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IHC Mapping Jira to PSA</label>
    <pluralLabel>IHC Mappings Jira to PSA</pluralLabel>
</CustomObject>